@@ -27,6 +27,8 @@
 #ifndef USTRING_H
 #define USTRING_H
 
+#include <string.h>
+
 #define ustrcasecmp_P(s1,s2) (strcasecmp_P((char *)(s1), (s2)))
 #define ustrchr(s,c)         ((uint8_t *)strchr((char *)(s), (c)))
 #define ustrcmp(s1,s2)       (strcmp((char *)(s1), (char *)(s2)))
